--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.16)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 set(EXTRA_COMPONENT_DIRS 
-    ${CMAKE_CURRENT_LIST_DIR}/lib_common/gpio
+    ${CMAKE_CURRENT_LIST_DIR}/lib/gpio
     ${CMAKE_CURRENT_LIST_DIR}/services
 )
 
