--- a/services/ota_services/CMakeLists.txt
+++ b/services/ota_services/CMakeLists.txt
@@ -1,6 +1,6 @@
-set(app_src wifi_services.c)
+set(app_src ota_services.c)
 
-set(pri_req esp_wifi nvs_flash mqtt http_services mqtt_services output)
+set(pri_req lwip esp_http_client nvs_flash app_update http_services)
 idf_component_register(SRCS ${app_src}
                        INCLUDE_DIRS "." 
                        REQUIRES ${pri_req})
