--- a/services/sleep_services/CMakeLists.txt
+++ b/services/sleep_services/CMakeLists.txt
@@ -1,6 +1,6 @@
-set(app_src wifi_services.c)
+set(app_src sleep_services.c)
 
-set(pri_req esp_wifi nvs_flash mqtt http_services mqtt_services output)
+set(pri_req nvs_flash driver soc esp_timer esp_wifi)
 idf_component_register(SRCS ${app_src}
                        INCLUDE_DIRS "." 
                        REQUIRES ${pri_req})
